--- a/dthread/web/.editorconfig
+++ b/dthread/web/.editorconfig
@@ -1,11 +1,13 @@
+# editorconfig.org
 root = true
-[*]
-end_of_line = lf
-insert_final_newline = true
-trim_trailing_whitespace = true
 
-[*.{js,vue,css}]
-charset = utf-8
+[*]
 indent_style = space
 indent_size = 2
-continuation_indent_size = 6
+end_of_line = lf
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+[*.md]
+trim_trailing_whitespace = false
