--- a/dthread/web/tsconfig.json
+++ b/dthread/web/tsconfig.json
@@ -1,10 +1,37 @@
 {
-    "compilerOptions": {
-      "target": "esnext",
-      "module": "esnext",
-      // this enables stricter inference for data properties on `this`
-      "strict": true,
-      "jsx": "preserve",
-      "moduleResolution": "node"
-    }
-  }
+  "compilerOptions": {
+    "target": "ES2018",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "lib": [
+      "ESNext",
+      "ESNext.AsyncIterable",
+      "DOM"
+    ],
+    "esModuleInterop": true,
+    "allowJs": true,
+    "sourceMap": true,
+    "strict": true,
+    "noEmit": true,
+    "experimentalDecorators": true,
+    "baseUrl": ".",
+    "paths": {
+      "~/*": [
+        "./*"
+      ],
+      "@/*": [
+        "./*"
+      ]
+    },
+    "types": [
+      "@nuxt/types",
+      "@nuxtjs/axios",
+      "@types/node"
+    ]
+  },
+  "exclude": [
+    "node_modules",
+    ".nuxt",
+    "dist"
+  ]
+}
