--- a/dthread/web/package.json
+++ b/dthread/web/package.json
@@ -18,6 +18,7 @@
     "@solana/wallet-adapter-phantom": "^0.8.1",
     "@solana/wallet-adapter-vue": "^0.4.1",
     "@solana/web3.js": "^1.31.0",
+    "borsh": "^0.7.0",
     "example-external-component": "file:example-external-component",
     "vue": "^3.2.25",
     "vue-router": "^4.0.0",
