--- a/dthread/web/package.json
+++ b/dthread/web/package.json
@@ -18,6 +18,7 @@
     "@solana/wallet-adapter-phantom": "^0.8.1",
     "@solana/wallet-adapter-vue": "^0.4.1",
     "@solana/web3.js": "^1.31.0",
+    "arweave": "^1.10.23",
     "borsh": "^0.7.0",
     "example-external-component": "file:example-external-component",
     "vue": "^3.2.25",
@@ -32,6 +33,7 @@
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "serve-static": "^1.14.1",
+    "testweave-sdk": "^0.2.2",
     "typescript": "^4.5.4",
     "vite": "^2.7.7",
     "vue-tsc": "^0.30.1"
