--- a/dthread/web/package.json
+++ b/dthread/web/package.json
@@ -14,6 +14,7 @@
     "debug": "node --inspect-brk server"
   },
   "dependencies": {
+    "@solana/spl-token": "^0.1.8",
     "@solana/wallet-adapter-base": "^0.8.1",
     "@solana/wallet-adapter-phantom": "^0.8.1",
     "@solana/wallet-adapter-vue": "^0.4.1",
